<resources>
    <string name="app_name">BirdApp</string>
    <string name="addTitle">Add a Bird to your collection</string>
    <string name="birdId">Reference</string>
    <string name="birdName">Name</string>
    <string name="dateNow">Pick Date</string>
    <string name="spinnerType">Type of Bird</string>
    <string name="birdImg">Image</string>
    <string name="addBird">Add</string>
    <string name="bird_image">Bird Image</string>
    <string name="select_bird_image">Select bird image</string>
    <string name="change_bird_image">Change bird image</string>
    <string name="action_collection">Collection</string>
    <string name="action_addbird">Add Bird</string>
    <string name="action_home">Home</string>

    <string name="select_profile_image">Select Profile Image</string>

    <string name="addImage">Add Image</string>

    <string name="action_edit">Edit Bird</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Please Update your Details Below</string>

    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bird Watching</string>
    <string name="nav_header_subtitle">email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add">Add</string>
    <string name="menu_collection">Collection</string>
    <string name="menu_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="favourites_title">Bird Locations</string>


    <string name="selected_item">Selected item:</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="signed_out">Signed Out</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="loginbtn">Login</string>
    <string name="register_account">Register</string>
    <string name="menu_collection_all">All Birds</string>

    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>


    <string-array name="Types">
        <item>None Selected</item>
        <item>Accipitriformes</item>
        <item>Albatross</item>
        <item>Auk</item>
        <item>Birds-of-paradise</item>
        <item>Bulbul</item>
        <item>Bustard</item>
        <item>Columbidae</item>
        <item>Cormorants</item>
        <item>Cranes</item>
        <item>Cuckoos</item>
        <item>Cygini</item>
        <item>Ducks</item>
        <item>Finches</item>
        <item>Flamingos</item>
        <item>Fowl</item>
        <item>Frogmouth</item>
        <item>Guineafowls</item>
        <item>Gulls</item>
        <item>Grouse</item>
        <item>Herons</item>
        <item>Hornbill</item>
        <item>Hoopoes</item>
        <item>Hummingbirds</item>
        <item>Ibis</item>
        <item>Kingfisher</item>
        <item>Kiwis</item>
        <item>Loons</item>
        <item>Nightjars</item>
        <item>Nyctibius</item>
        <item>Neognathae</item>
        <item>Old World sparrows</item>
        <item>Parrots</item>
        <item>Passerine</item>
        <item>Penguins</item>
        <item>Plover</item>
        <item>Potoo</item>
        <item>Rail</item>
        <item>Sandpiper</item>
        <item>Skuas</item>
        <item>Shorebirds</item>
        <item>Sternidae</item>
        <item>Stork</item>
        <item>Swallows</item>
        <item>Swifts</item>
        <item>Toucans</item>
        <item>Waterfowl</item>
        <item>Woodpeckers</item>
        <item>Skuas</item>
        <item>Sternidae</item>
        <item>Bustard</item>
        <item>Perl</item>

    </string-array>

</resources>