<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="">

    <group android:checkableBehavior="single">
      <!--  <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_house_24"
            android:title="@string/menu_home"/>-->
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_baseline_add_to_photos_24"
            android:title="@string/menu_add"/>
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_collection"/>
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_map"/>


    </group>
</menu>